--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "autoload": {
     "psr-4": {
-      "Sosupp\\Questionable\\": "src"
+      "Sosupp\\Questionable\\": "src",
+      "Sosupp\\Database\\Seeders\\": "database/seeders/"
     }
   },
   "autoload-dev": {
