--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,9 @@
   "require": {
     "php": "^7.4|^8.0|^8.1|^8.2|^8.3",
     "illuminate/support": "^10.0|^11.0|^12.0",
+    "intervention/image": "^2.7",
     "livewire/livewire": "^2.0|^3.0",
-    "intervention/image": "^2.7"
+    "sosupp/slim-dashboard": "^1.31"
   },
   "require-dev": {
     "orchestra/canvas": "^8.11",
